test/grammar/types/type_alias/type_alias_err_0/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:7:22
  |
7 | x1 = CheckArgType(1, "Golang") {}
  |                      ^ expected str(KCL) | str(CUE), got str(Golang)
  |